[Issue No #4] List items aligned to the left

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,9 @@
 body {
   background-color: #12b886;
 }
-
+li{
+  text-align: left;
+}
 .myButton {
   background-color: #fd7e14;
   border-radius: 12px;
